# CppND-System-Monitor-Project

./: CMakeLists.txt
include/: linux_parser.h  ncurses_display.h  process.h  processor.h  sort_process.h  system.h
src/: format.cpp  linux_parser.cpp  ncurses_display.cpp  process.cpp  processor.cpp  system.cpp
test/: utest_system_monitor.cpp
